--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "app/index.js",
   "scripts": {
-    "start": "npx tsc & node dist/index.js"
+    "start": "npx tsc & node dist/index.js",
+    "build": "npx tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.15",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "redis": "^4.5.1",
     "sequelize": "^6.28.0",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "typescript": "^4.9.4"
